[gd_scene load_steps=7 format=2]

[ext_resource path="res://Server/Gameplay/Gameplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Server/Connecting/Connecting.tscn" type="PackedScene" id=3]
[ext_resource path="res://Server/Master/ServerPackager.gd" type="Script" id=4]
[ext_resource path="res://Server/Master/NetworkServer.gd" type="Script" id=5]
[ext_resource path="res://Server/Options/Options.tscn" type="PackedScene" id=6]
[ext_resource path="res://Server/GameLogic/GameLogic.gd" type="Script" id=7]

[node name="ServerMaster" type="Node"]

[node name="NetworkServer" type="Node" parent="."]
script = ExtResource( 5 )

[node name="ServerPackager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GameLogic" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Connecting" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Options" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Gameplay" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="packet_received" from="NetworkServer" to="ServerPackager" method="_on_receive_packet"]
[connection signal="ability_used" from="ServerPackager" to="GameLogic" method="_on_ability_used"]
[connection signal="backdoor_used" from="ServerPackager" to="GameLogic" method="_on_backdoor_used"]
[connection signal="crack_used" from="ServerPackager" to="GameLogic" method="_on_crack_used"]
[connection signal="player_codes_submitted" from="ServerPackager" to="NetworkServer" method="send_client_codes"]
[connection signal="requested_packet_sending" from="ServerPackager" to="NetworkServer" method="send"]
[connection signal="done" from="Options" to="Gameplay" method="enter"]
[connection signal="options_saved" from="Options" to="ServerPackager" method="submit_player_codes"]
[connection signal="options_saved" from="Options" to="GameLogic" method="initialize"]
